tests/programs/taint/a4-test-cases/fail/taint_simple_fail1.rice
#[secure]
fn secure() -> int {
  0 
}

fn main() {
  println(int_to_string(secure()))
}